--- a/我的简历/index.html
+++ b/我的简历/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的简历</title>
+    <link rel="stylesheet" href="css/CSSReset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/transform.css">
 </head>
+
 <body>
-    你好啊
+    <input type="radio" class="slider-input" name="slider" id="slider1" checked="checked">
+    <input type="radio" class="slider-input" name="slider" id="slider2">
+    <input type="radio" class="slider-input" name="slider" id="slider3">
+    <input type="radio" class="slider-input" name="slider" id="slider4">
+    <ul class="slider">
+        <li>
+            <div class="home">
+                <h2>谭慧东的简历</h2>
+                <div class="h_section">
+                    <div class="s_left">
+                        <div class="h_img">
+                            <img src="image/11.jpg" alt="">
+                        </div>
+                        <div class="name">
+                            <p>谭慧东</p>
+                            <ul>
+                                <li><a href="mailto:15755566506@163.com">邮箱</a></li>
+                                <li><a href="https://github.com/tanhuidong">github</a></li>
+                                <li><a href="http://www.cnblogs.com/tanhuidong/">博客</a></li>
+                                <li><a href="http://www.boke.中国">网站</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="s_right">
+                        <div class="r_top">
+                            <h3>关于我</h3>
+                            <p></p>
+                        </div>
+                        <div class="r_bottom">
+                                <span>出生日期：96-08-14</span>
+                                <span>学历：本科</span>
+                                <span>兴趣：阅读、摄影与美食</span>
+                                <span>电话：15755566506</span>
+                                <span>QQ: 934509211</span>
+                                <span>邮箱：11575566506@163.com</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="skill">
+                <h3>我的技能</h3>
+                <ul class="skill_ul">
+                    <li><span class="span_top">HTML5+Css3</span><span class="span_bottom">熟练</span></li>
+                    <li><span class="span_top">JavaScript</span><span class="span_bottom">熟练</span></li>
+                    <li><span class="span_top">jQuery</span><span class="span_bottom">良好</span></li>
+                    <li><span class="span_top">Bootstrap</span><span class="span_bottom">不会</span></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <div class="project">
+                <h3>我的项目</h3>
+                <ul class="pro_ul">
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                    <li><a href="#"><img src="" alt=""></a></li>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <div class="practice">
+                <h3>联系我</h3>
+                <section>
+                    s
+                </section>
+                <footer>
+                    <p>© 2018 boke.中国 版权所有 皖ICP备18007816号</p> 
+                </footer>
+            </div>
+        </li>
+    </ul>
+    <label for="slider1"></label>
+    <label for="slider2"></label>
+    <label for="slider3"></label>
+    <label for="slider4"></label>
 </body>
+
 </html>
