--- a/我的简历/index.html
+++ b/我的简历/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>我的简历</title>
+    <link rel="stylesheet" href="css/CSSReset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    你好啊
+    <ul>
+        <li>
+            <div class="home">
+                1
+                <!-- <h2>谭慧东的简历</h2>
+                <div class="h_section">
+                    <div>
+                        <div class="h_img">
+                            <img src="" alt="">˜
+                        </div>
+                        <div class="name">
+                            <p>谭慧东</p>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="">
+                            <h3>关于我</h3>
+                            <p></p>
+                        </div>
+                        <div>
+                            <span>
+                                <h5>个人信息</h5>
+                                <p>出生日期：96-08-14</p>
+                                <p>学历：本科</p>
+                                <p>兴趣：阅读、摄影与美食</p>
+                            </span>
+                            <span>
+                                <h5>练习方式</h5>
+                                <p>电话：15755566506</p>
+                                <p>QQ: 934509211</p>
+                                <p>微信：TANHUIDONG666666</p>
+                            </span>
+                            <span>
+                                <h5>注释</h5>
+                                <p>邮箱：11575566506@163.com</p>
+                                <p>网站：http://www.boke.中国</p>
+                                <p>github：https://github.com/tanhuidong</p>
+                            </span>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+        </li>
+        <li>
+            <div class="skill">
+                2
+            </div>
+        </li>
+        <li>
+            <div class="project">
+                3
+            </div>
+        </li>
+        <li>
+            <div class="practice">
+                4
+            </div>
+        </li>
+    </ul>
 </body>
+
 </html>
